# Robocon-2025

./: .editorconfig  README.md  main.py  pyproject.toml
src/: ARditector.py  Ultrasonic_sensor.py  a_star.py  ar.py  emergency.py  gpio.py  hand.py  main.py  motor.py  pathfinding.py  position-estimate.py  position_estimate2.py  preview.py  robot.py  server.py  stage.py  test.py  test_main.py  util.py  visualize.py
src/mock/RPi/GPIO/: __init__.py
src/robot_parts/: arm.py  camera.py  driver.py
src/tasks/: driving.py  parcel_loading.py
