[project]
name = "itf-robocon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "rpi-gpio>=0.7.1 ; sys_platform == 'linux'",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = ["ruff>=0.13.1", "scipy-stubs>=1.16.2.0"]

[tool.pyright]
reportUnknownMemberType = false

[tool.ruff.lint]
extend-select = ["I"]
